upgrade backend and frontend about count score

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/trieu_phu_db
+spring.datasource.url=jdbc:mariadb://localhost:3306/quiz_db
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
